--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </script>
 </head>
 
-<body>
+<body id="Idbody">
   <!-- <div id="preloader"></div> -->
   <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
     <i class="bx bxl-whatsapp"></i>
@@ -423,6 +423,11 @@
         }
       }
     }
+
+  window.addEventListener("scroll", () => {
+    console.log("scrolled!!")
+  }));
+
   </script>
 
   <script src="js/main.js"></script>
